[package]
name = "rsa_ui"
description = "A simple UI for the RSA library"
homepage = "https://github.com/LeviLovie/rsa_ui"
license = "MIT"
version = "1.0.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dirs = "6.0.0"
eframe = "0.31.1"
pem = "3.0.5"
rand = "0.8.0"
ronf = { version = "0.3.0", features = ["read_file", "yaml"], default-features = false }
rsa = "0.9.8"
